--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,9 @@ html(ng-app='Vidzy')
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-resource.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-route.js')
+    script(src='http://libs.useso.com/js/angular.js/1.3.0-beta.9/angular.min.js')
+    script(src='http://libs.useso.com/js/angular.js/1.3.0-beta.9/angular-resource.js')
+    script(src='http://libs.useso.com/js/angular.js/1.3.0-beta.9/angular-route.js')
     script(src='/javascripts/vidzy.js')
   body
     block content
