--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,4 @@
 <h1>Home Page</h1>
 <ul>
-	<li ng-repeat='video in videos'{{video.title}}></li>
+	<li ng-repeat='video in videos'>{{video.title}}</li>
 </ul>
